backend/jobs/kubernetes/resilience-tests/company-virtual-service-with-delay.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: company
spec:
  hosts:
    - company
  http:
  - route:
    - destination:
        host: company
    fault:
      delay:
        fixedDelay: 4s
        percent: 100
