backend/jobs/kubernetes/resilience-tests/company-virtual-service-with-faults.yml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: company
spec:
  hosts:
    - company
  http:
  - route:
    - destination:
        host: company
    fault:
      abort:
        httpStatus: 500
        percentage:
          value: 20
